# polyester

./: .cursorrules  .gitignore  ARCHITECTURE.md  README.md  RESULTS.md  polyester.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: python_benchmarks.json  python_docs.json
scripts/: extract_python_docs.py  run_python_benchmarks.py
src/adapters/: __init__.py  base.py  python_docs_adapter.py
src/classifiers/: __init__.py  structural_intent_classifier.py
src/core/: __init__.py  document.py  relationship.py
src/stores/: VectorStore.py  __init__.py  base.py  bm25_store.py  graph_store.py  hybrid_store.py  vector_store.py
tests/: test_adapters.py  test_classifiers.py  test_models.py  test_stores.py
